--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
+*{
+   margin: 0px;
+padding: 0px;
+font-family: 'Times New Roman', Times, serif;
+}
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-  </body>
-</html>
+header{
+background-image: linear-gradient(black)(0,0,0,0.50),(black)(0,0,0,0.50),(black)(0,0,0,0.50), url(../Web-Development-Synoptic/images/carosel2.jpg);
+height: 100vh;
+background-size: cover;
+background-position: center;
+min-height: 100px;
+}
+
 
