--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
 *{
-   margin: 0px;
-padding: 0px;
-font-family: 'Times New Roman', Times, serif;
-}
-
-header{
-background-image: linear-gradient(black)(0,0,0,0.50),(black)(0,0,0,0.50),(black)(0,0,0,0.50), url(../Web-Development-Synoptic/images/carosel2.jpg);
-height: 100vh;
+    margin: 0;
+    padding: 0;
+ }
+#banner{
+         background: url(images/carosel2.jpg) ;
 background-size: cover;
 background-position: center;
-min-height: 100px;
+height: 100vh;
+
 }
-
-
