--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@
     padding: 0;
  }
 #banner{
-         background: url(images/carosel2.jpg) ;
-         background: linear-gradient(rgba(0,0,0,0.5),#009688);
+      
+         background: linear-gradient(rgba(0,0,0,0.5),#407ee8);
 background-size: cover; 
 background-position: center;
 height: 100vh;
+}
+
+.logo {
+width: 140px;
+position: absolute;
+top: 1%;
+left: 1%;
+
+
+
 
 }
